--- a/css/style.css
+++ b/css/style.css
@@ -77,24 +77,20 @@ body {
 
 .stats {
   width: 100%;
-  font-size: 20px;
+  font-size: 15px;
   margin: 30px;
-  position: relative;
-}
-.stats .wpm {
   display: flex;
+  gap: 1em;
 }
-.stats .wpm > .num {
-  font-size: 2em;
-}
-.stats::after {
-  content: "";
-  display: inline-block;
-  position: absolute;
-  background: green;
-  width: 10px;
-  height: 10px;
-  z-index: 100;
+.stats .stat {
+  padding: 5px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+  text-decoration: underline;
+  text-decoration-color: rgba(139, 203, 228, 0.9019607843);
+  text-underline-offset: 5px;
+  text-decoration-thickness: 3px;
 }
 
 #playaudio {
@@ -112,14 +108,16 @@ body {
 
 button {
   cursor: pointer;
-  background-color: rgba(98, 18, 236, 0.9019607843);
+  background-color: rgba(139, 203, 228, 0.9019607843);
   outline: none;
   border: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: "Roboto Mono";
   margin-top: 20px;
   padding: 6px;
   border-radius: 5px;
+  color: black;
+  font-weight: 700;
 }
 
 input {
