--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
-@import "https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600;700&display=swap";
 
 // vars
 $font: "Roboto Mono";
 $fontColor: white;
-$primaryColor: #8bcbe4e6;
+$primaryColor: #08b7fce6;
 $errorColor: rgba(249, 80, 80, 0.993);
 $background: #0f0f0f;
 $lighterBackground: #313337e6;
@@ -110,11 +110,11 @@ body {
 		padding: 5px;
 		border-radius: 5px;
 		color: white;
-		font-weight: 700;
+		font-weight: 600;
 		text-decoration: underline;
 		text-decoration-color: $primaryColor;
-		text-underline-offset: 5px;
-		text-decoration-thickness: 3px;
+		text-underline-offset: 6px;
+		text-decoration-thickness: 2px;
 	}
 }
 
